--- a/pet-shop-website-template/testimonial.html
+++ b/pet-shop-website-template/testimonial.html
@@ -86,7 +86,7 @@
                         </div>
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-4">
-                                <img class="img-fluid mx-auto"  src="img/SS-3.jpg" >                                
+                                <img class="img-fluid mx-auto w-50"  src="img/SS-3.jpg" >                                
                             </div>
                             <p>Acceso al servicio publicode salud para nuestros trabajadores,por eso nos afiliamos con una de las mejores EPS con mejor gestion  </p>
                             <hr class="w-25 mx-auto">
@@ -95,7 +95,7 @@
                         </div>
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-4">
-                                <img class="img-fluid mx-auto"  src="img/SS-4.jpg" alt="">
+                                <img class="img-fluid mx-auto w-50"  src="img/SS-4.jpg" alt="">
                     
                             </div>
                             <p>En nuestra empresa queremos prevenir, proteger y darte las herramientas para atender enfermedades y accidetes que puedan ocurrir en el entorno laborar. Por ello nos afiliamos con ARL con conocimiento y especialicación que cubran las necesidades de nuestros trabajadores </p>
